# tstosort

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tstosort/tools/: convert.py
