[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tstosort"
version = "0.0.3"
authors = [
  { name="al1sant0s", email="cnctalissonsantos@gmail.com" },
]
description = "Sort the storemenu files in alphabetically order for the game 'The Simpsons: Tapped Out'."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
tstosort = "tstosort.tools.convert:main"

[project.urls]
Homepage = "https://github.com/al1sant0s/tstosort"
Issues = "https://github.com/al1sant0s/tstosort/issues"
